--- a/app/src/main/res/layout/custom_toolbar_transport.xml
+++ b/app/src/main/res/layout/custom_toolbar_transport.xml
@@ -135,10 +135,23 @@
                         android:layout_width="140dp"
                         android:layout_height="35dp"
                         android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp"
+                        android:layout_marginEnd="5dp"
                         android:background="@drawable/tag_background"
                         android:fontFamily="@font/commons_demi_bold"
                         android:text="Выезд / Заезд"
+                        android:textAllCaps="false"
+                        android:textColor="@color/app_main_color"
+                        android:textSize="18sp" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_tag_fourth"
+                        android:layout_width="90dp"
+                        android:layout_height="35dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="10dp"
+                        android:background="@drawable/tag_background"
+                        android:fontFamily="@font/commons_demi_bold"
+                        android:text="Такси"
                         android:textAllCaps="false"
                         android:textColor="@color/app_main_color"
                         android:textSize="18sp" />
@@ -149,11 +162,4 @@
 
 
     </LinearLayout>
-
-
-
-
-
-
-
 </androidx.appcompat.widget.Toolbar>
