--- a/app/src/main/res/layout/fragment_change_name.xml
+++ b/app/src/main/res/layout/fragment_change_name.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/main_background"
     android:layout_height="match_parent"
+    android:background="@color/main_background"
     android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -58,7 +58,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
@@ -66,11 +66,16 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/lay"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:hint="@string/last_name">
+            android:hint="@string/last_name"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_last_name"
@@ -79,19 +84,22 @@
                 android:backgroundTint="@color/app_main_color"
                 android:fontFamily="@font/commons_regular"
                 android:inputType="textCapSentences"
-                android:textSize="16sp"
                 android:textColor="@color/app_main_color"
-                android:textColorHint="@color/app_main_color" />
+                android:textColorHint="@color/app_main_color"
+                android:textSize="16sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="wrap_content"
-            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:hint="Имя: ">
+            android:layout_marginTop="5dp"
+            android:hint="Имя: "
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/lay">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_name"
@@ -100,10 +108,10 @@
                 android:backgroundTint="@color/app_main_color"
                 android:fontFamily="@font/commons_regular"
                 android:inputType="textCapSentences"
-                android:textSize="16sp"
                 android:textColor="@color/app_main_color"
-                android:textColorHint="@color/app_main_color" />
+                android:textColorHint="@color/app_main_color"
+                android:textSize="16sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
